# nutools

./: CMakeLists.txt  CMakePresets.json
EventGeneratorBase/GENIE/: AddGenieEventsToArt_module.cc  CMakeLists.txt  EVGBAssociationUtil.h  GENIE2ART.cxx  GENIEHelper.cxx  GENIEHelper.h  GenieOutput_module.cc  MCTruthAndFriendsItr.cxx  MCTruthAndFriendsItr.h  MixGenieEvents_module.cc  mixtestjob.fcl
EventGeneratorBase/test/: CMakeLists.txt  TestGENIEHelper_module.cc  runGENIEHelperTest.fcl
Modules/: FindCRY.cmake
NuReweight/: GENIEReweight.cxx  GENIEReweight.h  ReweightLabels.h
SimulationBase/: CMakeLists.txt  GTruth.h  MCFlux.h  classes.h  classes_def.xml
bundle/: CMakeLists.txt  cstxsd-cfg.in  ifdh-cfg.in  ifdhc-cfg.in  libtorch-cfg.in  nu-cfg.in  nu.html.in  nubase-cfg.in  nulite-cfg.in  nulite.html.in  nulite_base-cfg.in  stan-cfg.in  tauola-cfg.in  tensorflow-cfg.in  triton-cfg.in
bundle/bootstrap/: bootstrapCPack.cmake  bootstrapModules.cmake
cmakeConfig/: CMakeLists.txt  nutools-fragment.cmake.in
nutools/: CMakeLists.txt
nutools/EventDisplayBase/: CMakeLists.txt
nutools/EventGeneratorBase/: CMakeLists.txt
nutools/EventGeneratorBase/CRY/: CMakeLists.txt  CRYHelper.cxx
nutools/EventGeneratorBase/GENIE/: CMakeLists.txt  EvtTimeFNALBeam.cxx  GENIE2ART.cxx  GENIEHelper.cxx  GENIEHelper.h
nutools/EventGeneratorBase/GiBUU/: CMakeLists.txt
nutools/EventGeneratorBase/test/: CMakeLists.txt  TestGENIEHelper_module.cc
nutools/G4Base/: CMakeLists.txt  G4PhysListRegisterOld.icc
nutools/IFDatabase/: CMakeLists.txt
nutools/MagneticField/: CMakeLists.txt
nutools/NuBeamWeights/: CMakeLists.txt
nutools/NuReweight/: CMakeLists.txt
nutools/NuReweight/art/: CMakeLists.txt  NuReweight.cxx
nutools/ParticleNavigation/: CMakeLists.txt
nutools/RandomUtils/: CMakeLists.txt
test/RandomUtils/: CMakeLists.txt
tools/: CMakeLists.txt
tools/cetbuildtools8/: update_cmake_cetb8.pl  update_cmake_g4.pl  update_g4.sh
tools/nutools3/: UseNuevdb.sh  fix_cmake_nuevdb.pl  fix_headers_nuevdb.pl
tools/nutools3/creation/: create_nuevdb.sh
tools/refactor/: CMakeLists.txt
tools/togithub/: README  checkout.sh  cleanup.sh  togithub.sh
ups/: product_deps  setup_for_development
